Fixing ever-present scrollbar issue on Swaps view (#11182)
* Fixing ever-present scrollbar issue on Swaps view

* Updating max-height

--- a/ui/pages/swaps/index.scss
+++ b/ui/pages/swaps/index.scss
@@ -31,11 +31,7 @@
     height: 100%;
     width: 100%;
     overflow-x: hidden;
-    overflow-y: scroll;
-
-    &--scrollable {
-      overflow: auto;
-    }
+    overflow-y: auto;
 
     @media screen and (min-width: 576px) {
       width: 460px;
