--- a/ui/pages/swaps/view-quote/index.scss
+++ b/ui/pages/swaps/view-quote/index.scss
@@ -22,7 +22,7 @@
 
     @media screen and (max-width: 576px) {
       overflow-y: auto;
-      max-height: 428px;
+      max-height: 420px;
     }
   }
 
